--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -60,7 +60,7 @@
       <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">{{{posts.name}}}</h5>
-        <p class="card-text">{{{post.descriptionription}}}</p>
+        <p class="card-text">{{{post.description}}}</p>
         <small>Date Posted: {{{posts.date_created}}}</small>
       </div>
     </div>
