--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Feed</a>
+                        <a class="nav-link active" aria-current="page" href="/">Feed</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Search Friends</a>
@@ -39,10 +39,10 @@
                 </ul>
                 <form class="d-flex">
                     {{#if logged_in}}
-                    <a href="/profile">profile</a> |
-                    <button class="no-button" id="logout">logout</button>
+                    <a class="btn btn-outline-success" href="/profile">Profile</a>
+                    <a class="btn btn-outline-success" id="logout">Logout</a>
                     {{else}}
-                    <a href="/login">login</a>
+                    <a class="btn btn-outline-success" href="/login">Login</a>
                     {{/if}}
                 </form>
             </div>
