--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,11 +4,11 @@
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
+        <label for="email-login">Email:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
+        <label for="password-login">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
@@ -19,17 +19,21 @@
   <div class="col-md-6">
     <h2>Signup</h2>
 
-    <form class="form signup-form">
+    <form class="form signup-form" id="signupform">
       <div class="form-group">
-        <label for="name-signup">name:</label>
+        <label for="name-signup">Full Name:</label>
         <input class="form-input" type="text" id="name-signup" />
       </div>
       <div class="form-group">
-        <label for="email-signup">email:</label>
+        <label for="username-signup">Username:</label>
+        <input class="form-input" type="text" id="username-signup" />
+      </div>
+      <div class="form-group">
+        <label for="email-signup">Email:</label>
         <input class="form-input" type="text" id="email-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup">password:</label>
+        <label for="password-signup">Password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
@@ -39,4 +43,5 @@
   </div>
 </div>
 
+<script src="./js/newuser.js"></script>
 <script src="./js/login.js"></script>
