fixed the damn models

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
         <script src="https://kit.fontawesome.com/a82bb2b66e.js" crossorigin="anonymous"></script>
         <link href="/static/css/2.1de125a5.chunk.css" rel="stylesheet">
         <link href="/static/css/main.fd419035.chunk.css" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="./assets/styles.css">
 </head>
 
 <body>
@@ -65,9 +65,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
-        <script src="/static/js/2.d32ecaa8.chunk.js"></script>
-        <script src="/static/js/main.2aace08e.chunk.js"></script>
-    <script src='./assets/script.js'> </script>
+        {{!-- <script src="/static/js/2.d32ecaa8.chunk.js"></script>
+        <script src="/static/js/main.2aace08e.chunk.js"></script> --}}
 
 </body>
 
