--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -22,7 +22,7 @@
       <div class="col-md-6">
         <h3 style="font-size: 40px;">Create a Post:</h3>
 
-        <form>
+        <form id="post-form">
           <div class="form-group">
             <label for="post-name" style="font-size: 35px;">Post Title</label>
             <input class="form-input" type="text" id="post-name" name="post-name" />
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="form-group">
-            <button type="submit" class="btn btn-primary">Create</button>
+            <button type="submit" id="createpost" class="btn btn-primary">Create</button>
           </div>
         </form>
       </div>
@@ -52,7 +52,7 @@
 </div>
 
 {{#if posts.length}}
-<div class="jumbotron jumbotron-fluid" style="border: 1px black solid; margin: 1% 20%; padding: 4%; height: 70vh;">
+<div class="jumbotron jumbotron-fluid jumbocontainer">
   <div class="container">
 
     {{#each posts as |post|}}
@@ -69,3 +69,5 @@
   {{/if}}
 </div>
 </div>
+
+<script src='/js/newpost.js'> </script>
