--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,33 @@
-.jumbocontainer{
+.jumbocontainer {
     border: 1px black solid; 
     margin: 1% 20%; 
     padding: 4%; 
     height: 70vh; 
+    background-color: white;
 }
+
+/* .form-group {
+    box-shadow: 0 0 10px black
+} */
+
+/* .no-button {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    color: #1b89bc;
+    text-decoration: none;
+    font-size: 100%;
+  }
+
+  .no-button:hover {
+    color: #065b83;
+    text-decoration: underline;
+  } */
+
+
+
+
+
+
+
