--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,6 +2,7 @@
     {{#each posts as |post|}}
     <li>
         <div class="card" style="width: 500px;; margin-top:10px">
+                {{!-- <p>Created by {{post.fullname}} on {{format_date fullname.date_created}}</p> --}}
             <header style="padding: 10px">{{post.name}}</header>
 
             <img src="{{post.photo}}" class="card-img-top" alt="...">
