--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,8 +14,8 @@
     <link rel="stylesheet" type="text/css" href="./assets/styles.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body style="background-color: rgb(196, 170, 216);">
+    <nav style="box-shadow: 0 0 10px black" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Wobal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -39,10 +39,10 @@
                 </ul>
                 <form class="d-flex">
                     {{#if logged_in}}
-                    <a class="btn btn-outline-success" href="/profile">Profile</a>
-                    <a class="btn btn-outline-success" id="logout">Logout</a>
+                    <a style="background-color: rgb(196, 170, 216); border: 2px solid black; color: white; margin-right: 10px" class="btn btn-outline-success" href="/profile">Profile</a>
+                    <a style="background-color: rgb(196, 170, 216); border: 2px solid black; color: white" class="btn btn-outline-success" id="logout">Logout</a>
                     {{else}}
-                    <a class="btn btn-outline-success" href="/login">Login</a>
+                    <a style="background-color: rgb(196, 170, 216); border: 2px solid black; color: white" class="btn btn-outline-success" href="/login">Login</a>
                     {{/if}}
                 </form>
             </div>
