--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,43 +1,43 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+<div style="background-color: white;" class="row">
+  <div style="box-shadow: 0 0 10px black" class="col-md-6 ml-1">
+    <h2 style="padding-left: 28px; padding-bottom: 10px">Login</h2>
 
     <form class="form login-form">
-      <div class="form-group">
+      <div style="padding-left: 28px; padding-bottom: 10px" class="form-group">
         <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <input style="border: 2px solid black" class="form-input" type="text" id="email-login" />
       </div>
       <div class="form-group">
         <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <input style="border: 2px solid black" class="form-input" type="password" id="password-login" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+      <div style="padding-left: 28px; padding-top: 10px" class="form-group">
+        <button style="background-color: rgb(196, 170, 216); border: 2px solid black" class="btn btn-primary" type="submit">login</button>
       </div>
     </form>
   </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
+  <div style="box-shadow: 0 0 10px black" class="col-md-6 ml-1">
+    <h2 style="padding-left: 28px; padding-bottom: 10px">Signup</h2>
 
     <form class="form signup-form" id="signupform">
-      <div class="form-group">
+      <div style="padding-left: 28px; padding-bottom: 10px" class="form-group">
         <label for="name-signup">Full Name:</label>
         <input class="form-input" type="text" id="name-signup" />
       </div>
-      <div class="form-group">
+      <div style="padding-left: 28px; padding-bottom: 10px" class="form-group">
         <label for="username-signup">Username:</label>
         <input class="form-input" type="text" id="username-signup" />
       </div>
-      <div class="form-group">
+      <div style="padding-left: 61px; padding-bottom: 10px" class="form-group">
         <label for="email-signup">Email:</label>
         <input class="form-input" type="text" id="email-signup" />
       </div>
-      <div class="form-group">
+      <div style="padding-left: 33px; padding-bottom: 10px" class="form-group">
         <label for="password-signup">Password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+      <div style="padding-left: 28px; padding-top: 10px; padding-bottom: 10px" class="form-group">
+        <button style="background-color: rgb(196, 170, 216); border: 2px solid black" class="btn btn-primary" type="submit">signup</button>
       </div>
     </form>
   </div>
