working display comment

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,13 +9,11 @@
             <div class="card-body">
                 <p class="card-text">{{post.description}}</p>
             </div>
-            <!--
-            {{#each comments as |comment|}}
+            {{#each post.Comments as |comment|}}
                 <div style="padding:10px; border: red; background:#dedede">
                     <p > {{comment.description}}</p>
                 </div>
             {{/each}}
-            -->
         </div>
 
     </li>
