--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,7 +11,7 @@
             </div>
             <div class="">
             <label for="" style="font-size: 10px"></label>
-            <textarea style="height: 30px; width: 80%" placeholder="Type a Comment..." name=""></textarea>
+            <input style="height: 30px; width: 80%" placeholder="Type a Comment..." name=""></input>
           </div>
             {{#each post.Comments as |comment|}}
                 <div style="padding:10px; border: red; background:#dedede">
