css and other changes

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
-<div style="background-color: white;" class="row">
-  <div style="box-shadow: 0 0 10px black" class="col-md-6 ml-1">
+<div style="background-color: none; display:flex;" class="row">
+  <div class="col-md-6 ml-1 login">
     <h2 style="padding-left: 28px; padding-bottom: 10px">Login</h2>
 
     <form class="form login-form">
@@ -16,7 +16,7 @@
       </div>
     </form>
   </div>
-  <div style="box-shadow: 0 0 10px black" class="col-md-6 ml-1">
+  <div style="box-shadow: 0 0 10px black; background-color: white;" class="col-md-6 ml-1">
     <h2 style="padding-left: 28px; padding-bottom: 10px">Signup</h2>
 
     <form class="form signup-form" id="signupform">
