--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,8 +29,20 @@
     
   }
 
+  .login{
+    margin-right:5%;
+    box-shadow: 0 0 10px black; 
+    width: 45%; 
+    background-color: white;
+  }
 
 
-
+  @media only screen and (max-width: 777px) {
+    .login{
+      margin-right:0%;
+      width: 100%; 
+      margin-bottom: 5%;
+    }
+  }
 
 
