--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
         <script src="https://kit.fontawesome.com/a82bb2b66e.js" crossorigin="anonymous"></script>
         <link href="/static/css/2.1de125a5.chunk.css" rel="stylesheet">
         <link href="/static/css/main.fd419035.chunk.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 
 <body style="background-color: rgb(196, 170, 216);">
