--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,7 +5,7 @@
     <div class="card mb-3" style="max-width: 100%; min-height: 100%;">
       {{#if user.profile_pic}}
       <div class="col-md-4">
-        <img src="..." alt="...">
+        <img src="{{user.profile_pic}}" alt="{{user.fullname}}'s profile picture" style="max-width: 300px;">
       </div>
       {{/if}}
       <div class="row g-0">
@@ -52,7 +52,7 @@
 
     {{#each posts as |post|}}
     <div class="card spacing" style="width: 100%;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">{{{posts.name}}}</h5>
         <p class="card-text">{{{post.description}}}</p>
