signup and image upload now works

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,7 +14,7 @@
             <h5 class="card-title">{{{user.fullname}}}</h5>
             <p class="card-text">{{{user.description}}}</p>
             {{!-- image link for profile picture  --}}
-          <label for="post-description" style="font-size: 100%;">Profile Picture link</label>
+          <label for="post-description" style="font-size: 100%;">Profile Picture Link</label>
           <input style="border: 2px solid black;" class="form-input" id="upload"
             name="post-photo"></input>
           </div>
@@ -34,13 +34,13 @@
         <form id="post-form" style="display: flex; justify-content: center; flex-wrap: wrap;">
           <h3 style="font-size: 40px;">Create a Post</h3>
           <label for="post-name" style="font-size: 35px;">Post Title</label>
-          <input style="border: 2px solid black; padding-left: 70px" class="form-input" type="text" id="post-name"
+          <input style="border: 2px solid black; padding-left: 0%" class="form-input" type="text" id="post-name"
             name="post-name" />
           <label for="post-description" style="font-size: 35px;">Description</label>
           <input style="border: 2px solid black;" class="form-input" id="post-description"
             name="post-description"></input>
           <label for="post-description" style="font-size: 35px;">Image Link</label>
-          <input style="border: 2px solid black;" class="form-input" id="upload"
+          <input style="border: 2px solid black;" class="form-input" id="post-upload"
             name="post-photo"></input>
           <button style="background-color: rgb(196, 170, 216); border: 2px solid black; color: white; margin-left:90px"
             type="submit" id="createpost" class="btn btn-primary">Create</button>
