--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,12 +29,7 @@
                         <a class="nav-link active" aria-current="page" href="/">Feed</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Search Friends</a>
-                    </li>
-                    <li class="nav-item">
-                        <i class="fal fa-bell fa-fw notification-icon link-with-unread"
-                            aria-label="Toggle notifications, 0 new messages" role="button" aria-hidden="true"
-                            aria-expanded="false"></i>
+                        <a class="nav-link" href="/search">Search Friends</a>
                     </li>
                 </ul>
                 <form class="d-flex">
