--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -13,10 +13,10 @@
           <div class="card-body">
             <h5 class="card-title">{{{user.fullname}}}</h5>
             <p class="card-text">{{{user.description}}}</p>
-            {{!-- image link for profile picture  --}}
-          <label for="post-description" style="font-size: 100%;">Profile Picture Link</label>
-          <input style="border: 2px solid black;" class="form-input" id="upload"
-            name="post-photo"></input>
+            {{!-- image link for profile picture --}}
+            <label for="post-description" style="font-size: 100%;">Profile Picture Link</label>
+            <input style="border: 2px solid black;" class="form-input" id="pfp-upload" name="pfp photo"></input> <button
+              id='submitButton' class="submitButton">Submit</button> <button class="submitButton" id="removePic">Remove</button>
           </div>
         </div>
       </div>
@@ -29,7 +29,7 @@
     style="border: black solid 1px; width: 50%; padding: 1%; box-shadow: 0 0 10px black; background-color: white; margin-top: 10px">
     <div class="row mt-4" style="display: flex; justify-content: center;">
       <div class="col-md-6">
-        
+
 
         <form id="post-form" style="display: flex; justify-content: center; flex-wrap: wrap;">
           <h3 style="font-size: 40px;">Create a Post</h3>
@@ -40,33 +40,47 @@
           <input style="border: 2px solid black;" class="form-input" id="post-description"
             name="post-description"></input>
           <label for="post-description" style="font-size: 35px;">Image Link</label>
-          <input style="border: 2px solid black;" class="form-input" id="post-upload"
-            name="post-photo"></input>
-          <button style="background-color: rgb(196, 170, 216); border: 2px solid black; color: white; margin-left:90px"
-            type="submit" id="createpost" class="btn btn-primary">Create</button>
+          <input style="border: 2px solid black;" class="form-input" id="post-upload" name="post-photo"></input>
+          <button type="submit" id="createpost" class="submitButton btn btn-primary">Create</button>
       </div>
       </form>
     </div>
   </div>
 </div>
 
-{{#if posts.length}}
-<div class="jumbotron jumbotron-fluid jumbocontainer">
-  <div class="container">
-
-    {{#each posts as |post|}}
-    <div class="card spacing" style="width: 100%;">
-      <img src="" class="card-img-top" alt="...">
+{{#if user.posts}}
+<div style="display:flex; justify-content: center; ">
+  <h1 style="margin-top: 1%; background-color: white; padding: 1%; border: black solid 1px; box-shadow: 0 0 10px black;">Your Posts</h1>
+</div>
+<ul style="list-style-type:none; display:flex; justify-content: space-around;">
+  {{#each user.posts as |post|}}
+  <li>
+    <div class="card" style="width: 500px;; margin-top:10px">
+      {{!-- <p>Created by {{post.fullname}} on {{format_date fullname.date_created}}</p> --}}
+      <header style="padding: 10px; font-weight:700;">{{post.name}}</header>
+      {{#if post.photo}}
+      <img src="{{post.photo}}" class="card-img-top" alt="...">
+      {{/if}}
       <div class="card-body">
-        <h5 class="card-title">{{{posts.name}}}</h5>
-        <p class="card-text">{{{post.description}}}</p>
-        <small>Date Posted: {{{posts.date_created}}}</small>
+        <p class="card-text">{{post.description}}</p>
       </div>
+      <div class="">
+        <label for="" style="font-size: 10px"></label>
+        <input style="height: 30px; width: 80%" placeholder="Type a Comment..." name=""></input>
+      </div>
+      {{#each post.Comments as |comment|}}
+      <div style="padding:10px; border: red; background:#dedede">
+        <p> {{comment.description}}</p>
+        <button class="btn btn-sm btn-danger delbutton" data-id="{{comment.id}}">delete</button>
+      </div>
+      {{/each}}
+
     </div>
-    {{/each}}
-  </div>
-  {{/if}}
-</div>
-</div>
+
+  </li>
+  {{/each}}
+</ul>
+{{/if}}
 
 <script src='/js/newpost.js'> </script>
+<script src='/js/updateuser.js'> </script>
