--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,9 +2,9 @@
     {{#each posts as |post|}}
     <li>
         <div class="card" style="width: 500px;; margin-top:10px">
-                {{!-- <p>Created by {{post.fullname}} on {{format_date fullname.date_created}}</p> --}}
+            {{!-- <p>Created by {{post.fullname}} on {{format_date fullname.date_created}}</p> --}}
             <header style="padding: 10px; font-weight:700;">{{post.name}}</header>
-{{#if post.photo}}
+            {{#if post.photo}}
             <img src="{{post.photo}}" class="card-img-top" alt="...">
             {{/if}}
             <div class="card-body">
@@ -12,21 +12,25 @@
                 <p class="card-text">{{post.user.fullname}}</p>
             </div>
             <div class="">
-            <label for="" style="font-size: 10px"></label>
-            <input style="height: 30px; width: 80%" placeholder="Type a Comment..." name=""></input>
-          </div>
+                <form class="formSelector">
+                    <label id="post_id" class="{{post.id}}" style="font-size: 10px"></label>
+                    <input style="height: 30px; width: 80%" id="addComment" placeholder="Type a Comment..."
+                        name=""></input>
+                </form>
+            </div>
             {{#each post.Comments as |comment|}}
-                <div style="padding:10px; border: red; background:#dedede">
-                    <p > {{comment.description}}</p>
-                    <p > {{comment.user.fullname}}</p>
-                    <!-- <p > {{comment.name}}</p> -->
-                    <button class="btn btn-sm btn-danger delbutton" data-id="{{comment.id}}">delete</button>
-                </div>
+            <div style="padding:10px; border: red; background:#dedede">
+                <p> {{comment.description}}</p>
+                <p> {{comment.user.fullname}}</p>
+                <!-- <p > {{comment.name}}</p> -->
+                <button class="btn btn-sm btn-danger delbutton" data-id="{{comment.id}}">delete</button>
+            </div>
             {{/each}}
         </div>
 
     </li>
-{{/each}}
+    {{/each}}
 </ul>
 
+<script src="./js/postcomments.js"></script>
 <script src="./js/homepage.js"></script>
