first push to heroku

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,7 +20,7 @@
             </div>
             {{#each post.Comments as |comment|}}
             <div style="padding:10px; border: red; background:#dedede">
-                <p> {{comment.description}}</p>
+                <p> {{comment.commentText}}</p>
                 <p> {{comment.user.fullname}}</p>
                 <button class="btn btn-sm btn-danger delbutton" data-id="{{comment.id}}">delete</button>
             </div>
