--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,14 +5,14 @@
     <form class="form login-form">
       <div style="padding-left: 28px; padding-bottom: 10px" class="form-group">
         <label for="email-login">Email:</label>
-        <input style="border: 2px solid black" class="form-input" type="text" id="email-login" />
+        <input style="border: 2px solid black" class="form-input" type="text" id="email-login">
       </div>
       <div class="form-group">
         <label for="password-login">Password:</label>
-        <input style="border: 2px solid black" class="form-input" type="password" id="password-login" />
+        <input type="password" style="border: 2px solid black" class="form-input" id="password-login">
       </div>
       <div style="padding-left: 28px; padding-top: 10px" class="form-group">
-        <button style="background-color: rgb(196, 170, 216); border: 2px solid black" class="btn btn-primary" type="submit">login</button>
+        <button type="submit" style="background-color: rgb(196, 170, 216); border: 2px solid black" class="btn btn-primary">login</button>
       </div>
     </form>
   </div>
@@ -22,22 +22,22 @@
     <form class="form signup-form" id="signupform">
       <div style="padding-left: 28px; padding-bottom: 10px" class="form-group">
         <label for="name-signup">Full Name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <input type="text" class="form-input" id="name-signup">
       </div>
       <div style="padding-left: 28px; padding-bottom: 10px" class="form-group">
         <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
+        <input type="text" class="form-input" id="username-signup">
       </div>
       <div style="padding-left: 61px; padding-bottom: 10px" class="form-group">
         <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <input type="text" class="form-input"  id="email-signup">
       </div>
       <div style="padding-left: 33px; padding-bottom: 10px" class="form-group">
         <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input type="password" class="form-input" id="password-signup">
       </div>
       <div style="padding-left: 28px; padding-top: 10px; padding-bottom: 10px" class="form-group">
-        <button style="background-color: rgb(196, 170, 216); border: 2px solid black" class="btn btn-primary" type="submit">signup</button>
+        <button type="submit" style="background-color: rgb(196, 170, 216); border: 2px solid black" class="btn btn-primary">signup</button>
       </div>
     </form>
   </div>
