--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,45 +8,37 @@
         <img src="{{user.profile_pic}}" alt="{{user.fullname}}'s profile picture" style="max-width: 300px;">
       </div>
       {{/if}}
-      <div class="row g-0">
-        <div class="col-md-8">
-          <div class="card-body">
+      <div class="card-body row g-0 col-md-8">
             <h5 class="card-title">{{{user.fullname}}}</h5>
             <p class="card-text">{{{user.description}}}</p>
+
             {{!-- image link for profile picture --}}
-            <label for="post-description" style="font-size: 100%;">Profile Picture Link</label>
-            <input style="border: 2px solid black;" class="form-input" id="pfp-upload" name="pfp photo"></input> <button
-              id='submitButton' class="submitButton">Submit</button> <button class="submitButton" id="removePic">Remove</button>
-          </div>
-        </div>
+            <label for="pfp-photo-link" style="font-size: 100%;">Profile Picture Link</label>
+            <input type="text" style="border: 2px solid black;" class="form-input" id="pfp-photo-link" name="pfp-photo-link"></input>
+
+            <button id='submitButton' class="submitButton">Submit</button> <button class="submitButton" id="removePic">Remove</button>
       </div>
     </div>
   </div>
 </div>
 
 <div style="display: flex; justify-content: center; margin-top: 1%;">
-  <div
-    style="border: black solid 1px; width: 50%; padding: 1%; box-shadow: 0 0 10px black; background-color: white; margin-top: 10px">
+  <div style="border: black solid 1px; width: 50%; padding: 1%; box-shadow: 0 0 10px black; background-color: white; margin-top: 10px">
     <div class="row mt-4" style="display: flex; justify-content: center;">
       <div class="col-md-6">
-
-
         <form id="post-form" style="display: flex; justify-content: center; flex-wrap: wrap;">
           <h3 style="font-size: 40px;">Create a Post</h3>
 
           <label for="post-name" style="font-size: 35px;">Post Title</label>
-          <input style="border: 2px solid black; padding-left: 0%" class="form-input" type="text" id="post-name"
-            name="post-name" />
+          <input type="text" style="border: 2px solid black; padding-left: 0%" class="form-input" id="post-name" name="post-name" />
 
-          <label for="post-description" style="font-size: 35px;">Description</label>
-          <input style="border: 2px solid black;" class="form-input" id="post-description"
-            name="post-description"></input>
+          <label for="post-description" style="font-size: 35px;">Text</label>
+          <input type="text" style="border: 2px solid black;" class="form-input" id="post-description" name="post-description"></input>
 
           <label for="post-photo-link" style="font-size: 35px;">Image Link</label>
-          <input style="border: 2px solid black;" class="form-input" id="post-photo-link" name="post-photo-link"></input>
+          <input type="text" style="border: 2px solid black;" class="form-input" id="post-photo-link" name="post-photo-link"></input>
 
           <button type="submit" id="createpost" class="submitButton btn btn-primary">Create</button>
-      </div>
       </form>
     </div>
   </div>
@@ -63,15 +55,12 @@
       {{!-- <p>Created by {{post.fullname}} on {{format_date fullname.date_created}}</p> --}}
       <header style="padding: 10px; font-weight:700;">{{post.name}}</header>
       {{#if post.photo}}
-      <img src="{{post.photo}}" class="card-img-top" alt="...">
+        <img src="{{post.photo}}" class="card-img-top" alt="...">
       {{/if}}
       <div class="card-body">
         <p class="card-text">{{post.description}}</p>
       </div>
-      <div class="">
-        <label for="" style="font-size: 10px"></label>
-        <input style="height: 30px; width: 80%" placeholder="Type a Comment..." name=""></input>
-      </div>
+
       {{#each post.Comments as |comment|}}
       <div style="padding:10px; border: red; background:#dedede">
         <p> {{comment.commentText}}</p>
