--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
     <form class="form login-form">
       <div style="padding-left: 28px; padding-bottom: 10px" class="form-group">
         <label for="email-login">Email:</label>
-        <input style="border: 2px solid black" class="form-input" type="text" id="email-login">
+        <input type="text" style="border: 2px solid black" class="form-input" id="email-login">
       </div>
       <div class="form-group">
         <label for="password-login">Password:</label>
